# crypto

backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/core/: block.rs  blockchain.rs  mod.rs  transaction.rs
backend/src/monitoring/: mod.rs
backend/src/network/: mod.rs
backend/src/security/: mod.rs
backend/src/smart_contracts/: mod.rs  vm.rs
backend/src/tests/: mod.rs
backend/test_state/: db  snap.0000000000000082
