[package]
name = "blockchain_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
sled = "0.34"
ring = "0.16"
prometheus = "0.13"
wasmtime = "0.30"
rand = "0.8"
rayon = "1.10"
reqwest = { version = "0.11", features = ["json"] }
